# juce_templates

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  HelloWorldLabel.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h
plugin/: CMakeLists.txt  Helpers.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
